# wf-gsettings

./: README.md  genschema.xsl  genschemas.sh  gsettings.cpp  meson.build  org.wayfire.gsettings.gschema.xml  wf-gsettings-gen-schemas.in
schemas/: meson.build  org.wayfire.plugin.alpha.gschema.xml  org.wayfire.plugin.animate.gschema.xml  org.wayfire.plugin.autorotate-iio.gschema.xml  org.wayfire.plugin.autostart.gschema.xml  org.wayfire.plugin.blur.gschema.xml  org.wayfire.plugin.command.gschema.xml  org.wayfire.plugin.core.gschema.xml  org.wayfire.plugin.cube.gschema.xml  org.wayfire.plugin.decoration.gschema.xml  org.wayfire.plugin.example.gschema.xml  org.wayfire.plugin.expo.gschema.xml  org.wayfire.plugin.fast-switcher.gschema.xml  org.wayfire.plugin.fisheye.gschema.xml  org.wayfire.plugin.grid.gschema.xml  org.wayfire.plugin.idle.gschema.xml  org.wayfire.plugin.input.gschema.xml  org.wayfire.plugin.invert.gschema.xml  org.wayfire.plugin.matcher.gschema.xml  org.wayfire.plugin.move.gschema.xml  org.wayfire.plugin.oswitch.gschema.xml  org.wayfire.plugin.place.gschema.xml  org.wayfire.plugin.resize.gschema.xml  org.wayfire.plugin.switcher.gschema.xml  org.wayfire.plugin.tile.gschema.xml  org.wayfire.plugin.vswipe.gschema.xml  org.wayfire.plugin.vswitch.gschema.xml  org.wayfire.plugin.wobbly.gschema.xml  org.wayfire.plugin.wrot.gschema.xml  org.wayfire.plugin.zoom.gschema.xml
